--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,46 @@
-.App {
-  text-align: center;
+.portfolio{
+    height: 100vh;
+    width: 100vw;
+    background-color: #111111;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.img{
+    width: 651px;
+    margin: auto;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.buttons{
+    margin: auto;
+    
 }
 
-.App-link {
-  color: #61dafb;
+.button{
+    background-color: #34ACE0;
+    width: 100px;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    transition: .2s ease-in-out;
+    font-family: 'Roboto'
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:hover{
+    transform: scale(1.1)
+}
+
+
+.a{
+    text-decoration: none;
+    font-size: 20px;
+    
+    color: whitesmoke;
+}
+
+.nav{
+    display: flex;
+    flex-direction: column;
+
 }
