--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,40 +1,80 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 .projects{
-    height: 150%;
+    height: 100vh;
     width: 100vw;
     background-color: #111111;
 }
 
-
+.actual{
+    height: 150vh;
+    width: 100vw;
+    background-color: #111111;
+}
 .devbuddy{
+    padding-top: 50px;
     padding: 50px;
     background-color: #111111;
     width: 75vw;
-    height: 25%;
+    height: 35%;
+}
+
+.videos{
+    width: 300px;
 }
 
 .content{
     display: flex;
+    flex-direction: column;
 }
 
 .content2{
     margin-left: 15px;
     color: white;
-
+    
 }
 
 .stacky{
     padding: 50px;
     background-color: #111111;
     width: 75vw;
-    height: 25%;
+    height: 35%;
 }
 
 .b{
     text-decoration: none;
-    color: white;
+    color: #34ACE0;
     
 }
 
 .ptag{
     font-size: 13px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.project-headers{
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+
+
+/* Media Queries */
+
+@media screen and (max-width: 535px){
+    .each-one{
+        padding-top: 20px;
+        height: 190vh;
+        background-color: #111111;
+    }
+}
+@media screen and (min-width: 720px){
+    .content{
+        flex-direction: row;
+    }
+}
+
+@media screen and (min-width: 1020px){
+  
 }
