--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,45 +1,18 @@
-.Contact{
-    color: white;
-    width: 100vw;
-    height: 100vh;
-    background-color: #111111;
+.Contact {
+  color: #f4a261;
+  font-family: "Rubik", sans-serif;
+  display: flex;
+  justify-content: center;
 }
 
-.header{
-    margin-top: 10px;
-    border: solid 2px white;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 30px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+.contacts h1 {
+  font-size: 50px;
+  padding-bottom: 10px;
 }
-
-.contacts{
-    padding-top: 100px;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-.mypicture{
-    width: 300px;
-    margin: auto;
-    border-radius: 10px;
-}
-
 
 /* Media Query */
 
-@media screen and (min-width: 720px){
-    .mypicture{
-        width: 400px;
-        transition: .2s ease-in-out;
-    }
+@media screen and (min-width: 720px) {
 }
-@media screen and (min-width: 1200px){
-    .mypicture{
-        width: 500px;
-        transition: .2s ease-in-out;
-    }
+@media screen and (min-width: 1200px) {
 }
